fix: adjust menu on tablet/desktop screen

--- a/index.css
+++ b/index.css
@@ -475,13 +475,23 @@ footer {
     flex-direction: row;
     justify-content: space-between;
     padding: 0.5em 6em 0 4em;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.5);
   }
-  .navigation {
-    display: flex;
-    column-gap: 2em;
+  .hover-menu {
+    position: inherit;
+    width: fit-content;
+    box-shadow: none;
   }
 
-  .hover-menu {
+  .hover-menu:hover {
+    top: auto;
+  }
+
+  .hover-menu__navigation {
+    flex-direction: row;
+  }
+
+  .hover-menu__btn {
     display: none;
   }
 }
